k8s/deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: koublis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: koublis-db
  namespace: koublis
  labels:
    app: koublis-db
spec:
  replicas: 1
  serviceName: koub-db
  selector:
    matchLabels:
      app: koublis-db
  template:
    metadata:
      labels:
        app: koublis-db
    spec:
      containers:
        - name: koublis-db
          image: mongo:4.4
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: data-mongodb
          resources:
            requests:
              cpu: 100m
              memory: 400Mi
            limits:
              cpu: 200m
              memory: 500Mi
      volumes:
        - name: data-mongodb
          persistentVolumeClaim:
            claimName: pvc-data-mongodb
---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: koublis
  labels:
    app: koublis-db
spec:
  ports:
    - port: 27017
  selector:
    app: koublis-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: koublis
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-svc
  namespace: koublis
  labels:
    app: mongo-express
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: mongo-express
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongo-express-ingress
  namespace: koublis
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: midd-auth@file
spec:
  rules:
    - host: mongodb.celld.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: mongo-express-svc
              servicePort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koublis-api
  namespace: koublis
  labels:
    app: koublis-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koublis-api
  template:
    metadata:
      labels:
        app: koublis-api
    spec:
      containers:
        - name: koublis-api
          image: registry.celld.tk/celld-projects/koublis-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
            limits:
              cpu: 500m
              memory: 300Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: koublis-api-svc
  namespace: koublis
  labels:
    app: koublis-api
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: koublis-api
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: koublis-api-ingress
  namespace: koublis
spec:
  rules:
    - host: koublis.celld.tk
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              serviceName: koublis-api-svc
              servicePort: 80
